kubernetes/apps/grocy/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grocy
  namespace: grocy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
    spec:
      containers:
        - name: grocy
          image: lscr.io/linuxserver/grocy:4.5.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: grocy
          resources:
            requests:
              cpu: 2m
              memory: 70Mi
            limits:
              memory: 70Mi
      restartPolicy: Always
      volumes:
        - name: grocy
          persistentVolumeClaim:
            claimName: grocy
